----------
v6.1.0-git
----------

[mms] Rename 'compose_attach' hook as 'compose_attachment'.
[mms] Honor forward_default preference in smartmobile view.
[mms] Add PGP keylength configuration option (Request #12099).
[mjr] Expose the Maillog via the public API.
[mms] Better handling of flag change attempts when browser cached state
      (dynamic/smartmobile view) is different than the server state.
[mms] Move backend configuration parsing/retrieval to IMP_Imap_Config.
[mms] Spam reporting configuration has been moved to the backends file.
[mms] Support showing blocked Data URIs in HTML message data.
[mms] Add the 'mbox_acl' hook.
[mms] Move folder disabling configuration into the permissions system.
[mms] Upgraded IMP permissions to allow permissions to be set per active
      backend.
[mms] Allow the active search query to be edited in the smartmobile view.
[mms] Add link to exit out of search view in smartmobile view into the
      original mailbox.
[mms] Allow default special mailbox names to be overriden by a backend.
[mms] Move special mailboxes autocreation configuration into backends.php.
[mms] Add SMTP debugging.
[mms] Disable mailbox sorting by default if the remote server does not natively
      support it (Bug #12001).
[mms] Add the 'msg_filter' hook.
[mms] Added the 'attach_body_check' hook.
[mms] Add linked attachment information directly to main body text.
[mms] Added argument to the 'trailer' hook to allow HTML trailers to be
      generated.
[mms] Attachments can now be configured to be linked only if over a
      configurable size threshold.
[mms] Linked attachments are no longer a user-configurable action.
[mms] Spam/innocent reporting on the smartmobile message page now uses a popup
      instead of a modal dialog.
[mms] Re-add alerts log to dynamic mailbox view.
[mms] Rewritten/improved linked attachment code.
[mms] Add discard draft option to compose page allowing the user to cancel