@@ -69,8 +69,12 @@ class IMP_Ajax_Application extends Horde_Core_Ajax_Application
             break;
 
         case $registry::VIEW_SMARTMOBILE:
-            $this->addHandler('IMP_Ajax_Application_Handler_Smartmobile');
             $this->addHandler('IMP_Ajax_Application_Handler_Common');
+            $this->addHandler('IMP_Ajax_Application_Handler_Draft')->disabled = array(
+                'autoSaveDraft',
+                'saveTemplate'
+            );
+            $this->addHandler('IMP_Ajax_Application_Handler_Smartmobile');
             break;
         }
 
