@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add saving compose drafts in smartmobile view.
 * [mms] Rename &apos;compose_attach&apos; hook as &apos;compose_attachment&apos;.
 * [mms] Honor forward_default preference in smartmobile view.
 * [mms] Add PGP keylength configuration option (Request #12099).
